Configured CSS to fit requirements and added photo

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css\styles.css">
     <title>Thai Anh Van Vu</title>
 </head>
 
 <body>
-    <h1>Thai Anh Van Vu's </h1>
+    <h1>Thai Anh Van Vu</h1>
+    <img id="personal_picture" src="images\my_picture.jpg" alt="picture of me">
     <div>
         My name is Thai Anh Van Vu and I am a student at Bellevue College pursuing a career in IT.  <br />
-        I am also a digital artist who enjoys to draw in Krita but am considering switching to Clip Studio Paint. 
+        At my workplace, I work with Microsoft Access datasbases using SQL syntax to automate data manipulation. 
     </div>
 </body>
