renamed entities related to pictures

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Thai Anh Van Vu</h1>
-    <img id="profilepicture" src="images\my_picture.jpg" alt="picture of me">
+    <img id="personal_picture" src="images\profilepicture.jpg" alt="picture of me">
     <div>
         My name is Thai Anh Van Vu and I am a student at Bellevue College pursuing a career in IT.  <br />
         At my workplace, I work with Microsoft Access datasbases using SQL syntax to automate data manipulation. 
