--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1>Thai Anh Van Vu</h1>
     <img id="personal_picture" src="images\profilepicture.jpg" alt="picture of me">
+    <a href="resources.html">Resources</a>
+    <h2>
+        Welcome!  
+    </h2>
     <div>
         My name is Thai Anh Van Vu and I am a student at Bellevue College pursuing a career in IT.  <br />
         At my workplace, I work with Microsoft Access datasbases using SQL syntax to automate data manipulation. 
