Added another article and reformatted code

--- a/resources.html
+++ b/resources.html
@@ -33,7 +33,10 @@
             <td>
                 Manisha Priyadarshini
             </td>
-            <td>This article written by Manisha Priyadarshini from Fossbytes briefly describes different sensors that smartphones commonly have and how they are used in the real world. 
+            <td>
+                This article written by Manisha Priyadarshini from Fossbytes briefly describes different sensors that smartphones commonly have and how they are used in the real world. 
+                <br>
+                <br>
                 The sensors range from mundane sensors like GPS and Fingerprint sensors to more exotic sensors like Geiger Counters and Air Humidity sensors. This article would be useful for my class because 
                 it shows how some of the most common sensors on smartphones are used in the real world which can give me inspiration for my own projects that take advantage of sensors. However, this article 
                 does not show how to use each sensor in mobile development so I would still need to look elsewhere. 
@@ -51,9 +54,13 @@
                 JetRuby Agency
             </td>
             <td>
-                This article written by The JetRuby Agency on Jetruby.com is a step by step guide on how to implement a fingerprint scanner into an android application. It focuses on the FingerprintAPI and classes within this API like FIngerprintManager and
+                This article written by The JetRuby Agency on Jetruby.com is a step by step guide on how to implement a fingerprint scanner into an android application. 
+                <br>
+                <br>
+                It focuses on the FingerprintAPI and classes within this API like FingerprintManager and
                 FingerprintManagerCompat that are used for interfacing an android phone's fingerprint sensor with an application. For security, the use of Android KeyStore is shown to help keep fingerprint information secure. A KeyPairGenerator is created from KeyStore
                 to implement an encryptor and decryptor that helps store fingerprint data. The article shows the code that is used to complete these tasks and explains in great detail the process of implementing this fingerprint sensor solution. 
+                <br>
                 <br>
                 This article will be very useful as it explains both the concepts and code that I might need to know to implement fingerprint sensors in an application. Especially since I am considering using fingerprint sensors for upcoming mobile development projects. 
             </td>
@@ -72,7 +79,9 @@
             <td>
                 This article written by Enzo Lizama from Medium.com explores the use of accelerometers in Android Studio via Kotlin. 
                 <br>
+                <br>
                 The article starts with explaining what an accelerometer is and the kind of demo that will be created in the article. The entire source code of the application is also provided. 
+                <br>
                 <br>
                 While the source code and background information on accelerometers is useful, it does not explain in great detail how the code works or how it all fits together in the context  of accelerometers. Perhaps I might find use of the source code after 
                 reading over it myself. 
@@ -93,10 +102,39 @@
                 This article written by Sam Costello on Lifewire.com briefly describes the different sensors that exist on iPhones and how they are used. While most of the sensors on here are common amongst all smartphones, the article does
                 also talk about iPhone-specific sensor features like Face ID which can provide authentication for Apple services like Apple Pay. 
                 <br>
+                <br>
                 In terms of overall usefulness, this article would be moderately useful in the sense that, while I might not be doing very much iPhone development, it would be good for me to be aware of iPhone sensors and their features so that in the 
                 case that I do end up working with iPhones, I would be more informed of what sensor features are at my disposal. 
             <td>
                 7
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <a href="https://searchmobilecomputing.techtarget.com/definition/smartphone#:~:text=It%20enables%20the%20user%20to%20make%20and%20receive%20phone%20calls.&text=A%20smartphone%20has%20more%20advanced,digital%20assistants%20and%20much%20more.">What is a Smartphone</a>
+            </td>
+            <td>
+                Alyssa Provazza
+            </td>
+            <td>
+                This article written by Alyssa Provazza for Search Mobile Computing defines what smartphones are as well as the history behind the development of smartphones by different companies
+                <br>
+                <br>
+                The article starts off with a description of common uses for smartphones such as social media, payment methods, and personal health monitoring. It also talks about integration with other mobile devices like smartwatches to keep track of personal vitals.
+                This is followed by a section on industrial uses and how their compact size gives them an advantage over desktops when it comes to having a device for emails. 
+                <br>
+                <br>
+                The article also talks about built-in hardware such as screens and cameras. These go into great detail on how they work and the types of technologies that exist such as LCDs and OLED displays on mobile phones. 
+                <br>
+                <br>
+                This article also talks about the different vendors of smartphones and trends that these vendors have ushered. Knowing these trends would give me a good idea on what kind of features to expect on newer phones so that I can design my apps to take advantage of them.
+                A brief section on early smartphone history such as how smartphones emerged from earlier devices like PDAs during the late 20th and early 21st century and how the fusion of PDAs and cellphones done by big tech companies led to the eventual birth of smartphones that we see today. 
+                <br>
+                <br>
+                Last but not least, the article compares Androids to iPhones. The article compares the software of the two operating systems as well as how development on both platforms differs. This will prove useful when developing for both Android and IOS devices. 
+            <td>
+                9
             </td>
         </tr>
     </table>
