Moved resources.html to new folder and changed anchor tags accordingly.

--- a/html/resources.html
+++ b/html/resources.html
@@ -2,13 +2,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css\styles.css">
+    <link rel="stylesheet" href="..\css\styles.css">
     <title>Thai Anh Van Vu</title>
 </head>
 
 <body>
     <h1>Resources</h1>
-    <a href="index.html">Home</a>
+    <a href="../index.html">Home</a>
     <h2>
         Here is a table with articles that I may find useful for this class.
     </h2>
