--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Thai Anh Van Vu</h1>
     <img id="personal_picture" src="images\profilepicture.jpg" alt="picture of me">
-    <a href="resources.html">Resources</a>
+    <a href="html/resources.html">Resources</a>
     <h2>
         Welcome!  
     </h2>
