--- a/html/resources.html
+++ b/html/resources.html
@@ -4,20 +4,37 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="..\css\styles.css">
     <title>Thai Anh Van Vu</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-    <h1>Resources</h1>
-    <a href="../index.html">Home</a>
+    <div class='container-fluid bg-dark text-white'>
+        <h1>
+            Resources
+        </h1>
+    </div>
+        
+
+    <div class='container-fluid bg-light'>
+        <ul class='navbar-nav'>
+            <li class='nav-item'>
+                <a class='nav-link' href="../index.html">Home</a>
+            </li>
+
+        </ul>
+    </div>
+
+
     <h2>
         Here is a table with articles that I may find useful for this class.
     </h2>
     <h3>
         Click on the article names to read the articles
     </h3>
-    <table>
 
-
+    <table class='table table-light'>
         <thead>
             <tr>
                 <th>Article Name</th>
@@ -138,4 +155,5 @@
             </td>
         </tr>
     </table>
+
 </body>
