--- a/index.html
+++ b/index.html
@@ -4,17 +4,34 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css\styles.css">
     <title>Thai Anh Van Vu</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-    <h1>Thai Anh Van Vu</h1>
-    <img id="personal_picture" src="images\profilepicture.jpg" alt="picture of me">
-    <a href="html/resources.html">Resources</a>
-    <h2>
-        Welcome!  
-    </h2>
-    <div>
-        My name is Thai Anh Van Vu and I am a student at Bellevue College pursuing a career in IT.  <br />
-        At my workplace, I work with Microsoft Access datasbases using SQL syntax to automate data manipulation. 
+    <div class='container-fluid bg-dark text-white'>
+        <h1>
+            Thai Anh Van Vu <img id="personal_picture" src="images\profilepicture.jpg" alt="picture of me">
+        </h1>
     </div>
+        
+    <div class='container-fluid bg-light'>
+        <ul class='navbar-nav'>
+            <li class='nav-item'>
+                <a class='nav-link' href="html/resources.html">Resources</a>
+            </li>
+        </ul>
+    </div>
+
+
+    <div class='text-center'>
+        <h2>
+            Welcome!  
+        </h2>
+        <div>
+            My name is Thai Anh Van Vu and I am a student at Bellevue College pursuing a career in IT.  <br />
+            At my workplace, I work with Microsoft Access datasbases using SQL syntax to automate data manipulation. 
+        </div>
+    </div>    
+
 </body>
