Updated resources.html with ISIT 320 useful links

--- a/html/resources.html
+++ b/html/resources.html
@@ -27,11 +27,127 @@
     </div>
 
 
+    <!--Beginning of ISIT 320 Section-->
     <h2>
         Here is a table with articles that I may find useful for this class.
     </h2>
     <h3>
-        Click on the article names to read the articles
+        These articles are from ISIT 320
+    </h3>
+
+    <table class='table table-light'>
+
+        <thead>
+            <tr>
+                <th>Article Name</th>
+                <th>Author</th>
+                <th>Description</th>
+                <th>Usefulness Rating (Out of 10)</th>
+            </tr>
+        </thead>
+
+        <tr>
+            <td>
+                <a href="https://nextjs.org/learn/basics/create-nextjs-app">NextJS Tutorial</a>
+            </td>
+            <td>
+                Vercel
+            </td>
+            <td>
+                This article is a comprehensive guide to NextJS and goes through key concepts and features
+                <br>
+                <br>
+                Due to the emergence of ReactJS and its offshoots like NextJS, it would be good to have a NextJS tutorial on hand. That way I can consult it when using NextJS and I forget syntax. 
+                This tutorial would be useful for anybody who already has experience with ReactJS and wishes to branch out to offshoots that allow for additional features that are absent in ReactJS. 
+            </td>
+            <td>
+                10
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <a href="https://reactjs.org/tutorial/tutorial.html">ReactJS Tutorial</a>
+            </td>
+            <td>
+                Reactjs.org
+            </td>
+            <td>
+                This article is a comprehensive guide to ReactJS and goes through key concepts and features
+                <br>
+                <br>
+                This article is important because it is an introductory tutorial to ReactJS, a popular JavaScript Library created by Facebook. This would be useful for anybody who already has experience in
+                JavaScript and wants to improve their front-end implementations. 
+            </td>
+            <td>
+                10
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <a href="https://www.tutorialspoint.com/bootstrap/bootstrap_quick_guide.htm">TutorialsPoint Bootstrap quick start guide</a>
+            </td>
+            <td>
+                Tutorialspoint
+            </td>
+            <td>
+                This article is a beginner's guide to Bootstrap with most key concpets explained in one article. 
+                <br>
+                <br>
+                Bootstrap is a powerful tool for good UI and UX design so it would be good to have a beginner's guide handy for future projects. This will be useful for anybody who wants to learn how to conveniently
+                and quickly create a UI that is easy to use and has high accessibility. Tutorialspoint does have tutorials for other tools so I should have it in mind for both current and future projects. 
+            </td>
+            <td>
+                10
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <a href="https://www.postgresqltutorial.com/">PostgreSQL tutorial</a>
+            </td>
+            <td>
+                PostgreSQL Tutorial
+            </td>
+            <td>
+                A comprehensive guide to PostgreSQL
+                <br>
+                <br>
+                Since I am likely to be using Heroku for server-side projects and PostgreSQL is the type of SQL database that Heroku favors, I will need to be familiar with PostgreSQL to use 
+                Heroku's SQL hosting services. Generally speaking, anybody who plans to work with databases will benefit from this tutorial. However, those who work with SQL databases on Heroku will
+                benefit more from this since PostgreSQL is what Heroku's SQL services use. 
+            </td>
+            <td>
+                8
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <a href="https://www.w3schools.com/">W3Schools</a>
+            </td>
+            <td>
+                W3
+            </td>
+            <td>
+                Tutorial Site for Web Development
+                <br>
+                <br>
+                W3Schools has helped me many times throughout my web development endeavors and I am certain that it will continue to help me in the future. Especially when I am learning more JS libraries
+                and frameworks. As a site that is good for both beginners and experienced coders, it will be good for me to have W3Schools on hand in case I need to reference something quickly or read through
+                a tutorial for a new web development tool. 
+            </td>
+            <td>
+                10
+            </td>
+        </tr>
+        
+    </table>
+
+    <!--Beginning of PROG 272 Section-->
+    <h3>
+        These articles are from PROG 272
     </h3>
 
     <table class='table table-light'>
@@ -43,6 +159,7 @@
                 <th>Usefulness Rating (Out of 10)</th>
             </tr>
         </thead>
+        
         <tr>
             <td>
                 <a href="https://fossbytes.com/which-smartphone-sensors-how-work/">Which Sensors Do I Have In My Smartphone? How Do They Work?</a>
